--- a/pico_firmware/platformio.ini
+++ b/pico_firmware/platformio.ini
@@ -1,7 +1,16 @@
-; PlatformIO configuration file
-; Specifies board type (Raspberry Pi Pico)
-; Lists libraries/dependencies
-    ; will automatically generated in the library folder 
-; Compiler settings and upload configuration
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
-; can find a template for this 
+[env:pico]
+platform = raspberrypi
+board = pico
+framework = arduino
+lib_deps = 
+    Servo 
