Format lidar test nodes and launch file

--- a/pico_firmware/platformio.ini
+++ b/pico_firmware/platformio.ini
@@ -5,3 +5,8 @@
 ; Compiler settings and upload configuration
 
 ; can find a template for this 
+[env:pico_w]
+platform = raspberrypi
+board = pico_w
+framework = arduino
+monitor_speed = 115200
