--- a/esp32_firmware/platformio.ini
+++ b/esp32_firmware/platformio.ini
@@ -14,3 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
+lib_deps =
+  bblanchon/ArduinoJson@^7.0.0
+  adafruit/DHT sensor library@^1.4.6
+  adafruit/Adafruit Unified Sensor@^1.1.14
