downloaded paho-mqtt client lib

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 adafruit-circuitpython-mlx90640
 adafruit-circuitpython-bme680
 adafruit-circuitpython-tsl2591
+paho-mqtt
 
 numpy
 
 #uncomment above to test sensors 
-# add pho-mqtt later
