--- a/env_data/requirements.txt
+++ b/env_data/requirements.txt
@@ -1,7 +1,10 @@
-# adafruit-circuitpython-mlx90640
-# adafruit-circuitpython-bme680
-# adafruit-circuitpython-tsl2591
-# numpy
+adafruit-circuitpython-mlx90640
+adafruit-circuitpython-bme680
+adafruit-circuitpython-tsl2591
+numpy
+
+adafruit-blinka
+lgpio
 
 #uncomment above to test sensors 
 # add pho-mqtt later
