--- a/env_data/requirements.txt
+++ b/env_data/requirements.txt
@@ -3,5 +3,7 @@ adafruit-circuitpython-bme680
 adafruit-circuitpython-tsl2591
 numpy
 
+adafruit-blinka
+
 #uncomment above to test sensors 
 # add pho-mqtt later
