some more req txt changes

--- a/env_data/config.yaml
+++ b/env_data/config.yaml
@@ -1,5 +1,5 @@
 # DONE - MQTT broker IP address (Lenovo server)
-# Sensor I2C addresses and pins
+# NOT STARTED - Sensor I2C addresses and pins
 # DONE - Data collection intervals
 # DONE - Topic names for publishing
 
